# codex-mobile

./: .gitignore  OverView.md  README.md  docker-compose.yml  skills-lock.json
apps/backend/: .env.example  manage.py  requirements.txt
apps/backend/accounts/: serializers.py  urls.py  views.py
apps/backend/agents/: admin.py  command_catalog.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/backend/devices/: admin.py  apps.py  auth.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/backend/devlink_backend/: asgi.py  auth_views.py  dev_logs.py  dev_panel.py  exceptions.py  routing.py  settings.py  urls.py  wsgi.py
apps/backend/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  (+1 more)
apps/cli/: README.md  pyproject.toml
apps/cli/devlink_cli/: api_client.py  codex_process.py  config.py  daemon.py  main.py  terminal_bridge.py
apps/cli/devlink_cli/agents/: base.py  factory.py
apps/cli/devlink_cli/agents/adapters/: codex.py  shell.py
apps/cli/tests/: test_agents.py
apps/mobile/: App.tsx  app.json  cos.ps1  metro.config.js  package-lock.json  package.json
contracts/: codex-command-catalog.json  openapi.yaml
docs/: api.md  architecture.md  chat-workspace.md  codex-cli-audit.md  codex-cli-scope.md  database.md  mobile-pwsh-terminal-plan.md  mvp.md  pairing.md  roadmap.md  workspaces.md
historyjki/: chat_workspace.md  parowanie_cli.md  terminal_workspace.md
script/: create-user  create-user.ps1
scripts/: create-user.cmd  create-user.ps1  dev-backend.ps1  dev-cli.ps1  dev-logs.ps1  dev-mobile.ps1
(+64 files in other folders)
